// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sample trees: 1 1`] = `" (c = 0)"`;

exports[`sample trees: 2 1`] = `
"1,2 (c = 50)
.. (c = 0)
..1 (c = 20)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
..2 (c = 30)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
..0,2 (c = 40)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....2 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
..1,0 (c = 30)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
.... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0 (c = 10)
...... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
..1,1 (c = 40)
.... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)"
`;

exports[`sample trees: 3 1`] = `" (c = 0)"`;

exports[`sample trees: 4 1`] = `
"1,3,0,1 (c = 90)
..0,1,1,3 (c = 90)
.... (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,1,1 (c = 50)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,1 (c = 30)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,1 (c = 30)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
......1,1 (c = 40)
........ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,1 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
........1,0 (c = 30)
..........0,1 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............0,0 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............0 (c = 10)
................ (c = 0)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)"
`;

exports[`sample trees: 5 1`] = `
"1,2 (c = 50)
.. (c = 0)
..1 (c = 20)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
..2 (c = 30)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
..0,2 (c = 40)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....2 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
..1,0 (c = 30)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
.... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0 (c = 10)
...... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
..1,1 (c = 40)
.... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)"
`;

exports[`sample trees: 6 1`] = `
"0,1,0,0 (c = 50)
..0,0,0,1 (c = 50)
.... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,0,0 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0,1 (c = 40)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
......0 (c = 10)"
`;

exports[`sample trees: 7 1`] = `
"7,0,0,4 (c = 150)
..0,0,4,7 (c = 150)
.... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,0,4 (c = 70)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
......0 (c = 10)
........ (c = 0)
......4 (c = 50)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........2 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
........3 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
......0,4 (c = 60)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........4 (c = 50)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........3 (c = 40)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,2 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........0,0 (c = 20)"
`;

exports[`sample trees: 8 1`] = `
"7,8,4,6,8,3,8,6 (c = 580)
..3,4,6,6,7,8,8,8 (c = 580)
.... (c = 0)
....3,4,6,6 (c = 230)
...... (c = 0)
......3,4 (c = 90)
........ (c = 0)
........3 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
........4 (c = 50)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........3 (c = 40)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
........0,4 (c = 60)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........4 (c = 50)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
............3 (c = 40)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
..............2 (c = 30)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
................1 (c = 20)
.................. (c = 0)
..................0 (c = 10)
.................... (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,2 (c = 40)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)"
`;

exports[`sample trees: 9 1`] = `
"1,8,0,6 (c = 190)
..0,1,6,8 (c = 190)
.... (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,1,6 (c = 100)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,1 (c = 30)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......6 (c = 70)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........3 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
........4 (c = 50)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........3 (c = 40)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
........5 (c = 60)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........3 (c = 40)"
`;

exports[`sample trees: 10 1`] = `
"5,9,4,6,4,1,4,9,1,5 (c = 580)
..1,1,4,4,4,5,5,6,9,9 (c = 580)
.... (c = 0)
....1,1,4,4,4 (c = 190)
...... (c = 0)
......1,1 (c = 40)
........ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,1 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
........1,0 (c = 30)
..........0,1 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............0,0 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............0 (c = 10)
................ (c = 0)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
.......... (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
......1,1,4 (c = 90)
........ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........1,1 (c = 40)
.......... (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,1 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............0,0 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............0 (c = 10)
................ (c = 0)
..........1,0 (c = 30)
............0,1 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)"
`;

exports[`sample values: 1 1`] = `
Array [
  Array [],
  Array [
    0,
  ],
  Array [],
  Array [],
  Array [],
  Array [
    0,
  ],
  Array [],
  Array [],
  Array [],
  Array [],
]
`;

exports[`sample values: 2 1`] = `
Array [
  Array [
    1,
    2,
  ],
  Array [
    0,
  ],
  Array [
    0,
    2,
  ],
  Array [],
  Array [
    1,
    1,
  ],
  Array [
    0,
  ],
  Array [],
  Array [
    2,
  ],
  Array [
    2,
  ],
  Array [
    2,
    2,
  ],
]
`;

exports[`sample values: 3 1`] = `
Array [
  Array [],
  Array [
    0,
    0,
    0,
  ],
  Array [],
  Array [
    0,
  ],
  Array [],
  Array [
    0,
    0,
  ],
  Array [
    1,
    0,
    0,
  ],
  Array [],
  Array [],
  Array [
    2,
  ],
]
`;

exports[`sample values: 4 1`] = `
Array [
  Array [
    1,
    3,
    0,
    1,
  ],
  Array [],
  Array [
    1,
  ],
  Array [
    1,
  ],
  Array [
    1,
  ],
  Array [
    2,
    4,
  ],
  Array [
    4,
    1,
    1,
  ],
  Array [],
  Array [
    4,
  ],
  Array [
    3,
    4,
  ],
]
`;

exports[`sample values: 5 1`] = `
Array [
  Array [
    1,
    2,
  ],
  Array [
    0,
    2,
    3,
    2,
  ],
  Array [],
  Array [
    4,
    4,
  ],
  Array [
    3,
  ],
  Array [],
  Array [
    2,
    4,
    5,
    2,
  ],
  Array [
    2,
    1,
    2,
    3,
    5,
  ],
  Array [
    4,
    3,
    1,
    3,
  ],
  Array [
    3,
    0,
    5,
  ],
]
`;

exports[`sample values: 6 1`] = `
Array [
  Array [
    0,
    1,
    0,
    0,
  ],
  Array [
    0,
    4,
    1,
  ],
  Array [
    5,
  ],
  Array [
    1,
    1,
  ],
  Array [
    1,
    1,
    4,
    5,
    5,
  ],
  Array [
    3,
  ],
  Array [
    6,
    0,
    2,
    0,
    3,
  ],
  Array [
    0,
    0,
  ],
  Array [
    6,
    5,
    5,
    3,
    6,
    6,
  ],
  Array [
    2,
    1,
    2,
  ],
]
`;

exports[`sample values: 7 1`] = `
Array [
  Array [
    7,
    0,
    0,
    4,
  ],
  Array [],
  Array [
    0,
    0,
    2,
    0,
    4,
  ],
  Array [
    1,
    4,
    0,
  ],
  Array [
    4,
    5,
    2,
    5,
  ],
  Array [
    1,
    0,
    3,
    5,
  ],
  Array [],
  Array [
    1,
    3,
    3,
    1,
  ],
  Array [
    4,
  ],
  Array [
    3,
  ],
]
`;

exports[`sample values: 8 1`] = `
Array [
  Array [
    7,
    8,
    4,
    6,
    8,
    3,
    8,
    6,
  ],
  Array [
    7,
    1,
    4,
    3,
    0,
    7,
    2,
    4,
  ],
  Array [
    8,
    2,
    8,
    1,
    5,
  ],
  Array [
    2,
    7,
    1,
    6,
    7,
    3,
  ],
  Array [
    0,
    3,
    2,
  ],
  Array [
    5,
    6,
  ],
  Array [
    6,
    7,
    6,
    6,
  ],
  Array [
    5,
    3,
    3,
    2,
    5,
  ],
  Array [
    8,
  ],
  Array [
    0,
    7,
  ],
]
`;

exports[`sample values: 9 1`] = `
Array [
  Array [
    1,
    8,
    0,
    6,
  ],
  Array [],
  Array [
    6,
  ],
  Array [
    6,
    6,
    6,
    7,
    7,
    4,
  ],
  Array [
    4,
    6,
    1,
    0,
    1,
    4,
    7,
    8,
  ],
  Array [
    5,
    4,
    4,
    5,
    5,
    7,
    5,
    5,
    8,
  ],
  Array [
    3,
    2,
    1,
    1,
    6,
  ],
  Array [
    4,
    6,
    2,
    7,
    7,
    8,
    4,
    4,
  ],
  Array [
    6,
    4,
    7,
    7,
  ],
  Array [
    1,
    2,
    0,
    6,
  ],
]
`;

exports[`sample values: 10 1`] = `
Array [
  Array [
    5,
    9,
    4,
    6,
    4,
    1,
    4,
    9,
    1,
    5,
  ],
  Array [
    6,
    1,
    7,
    6,
    5,
    9,
  ],
  Array [
    8,
    1,
    0,
    7,
    6,
    8,
  ],
  Array [
    0,
    4,
    0,
    0,
    2,
  ],
  Array [
    6,
    10,
  ],
  Array [
    1,
    3,
    7,
    8,
    6,
    3,
    3,
    2,
  ],
  Array [
    5,
    10,
  ],
  Array [
    6,
    0,
    1,
    1,
    1,
    6,
    10,
    8,
    7,
  ],
  Array [
    0,
    8,
    1,
  ],
  Array [
    7,
    3,
    7,
    0,
    4,
    1,
    5,
    8,
    4,
    2,
  ],
]
`;
